--- a/Component_base2/build.gradle
+++ b/Component_base2/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 }
