--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation project(':Component_base1')
+    implementation project(':Component_base2')
 }
